Make slideshow larger to prevent white gap.

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -13,7 +13,7 @@
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: calc(100vh - 3.5rem);
+  height: calc(100.1vh - 3.5rem);
   min-height: 300px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
